Fix rendering bug on firefox (v50.0.2)
Observed behaviour:

- collapsed 1px/2px borders are drawn with the same width
- some of the (1px) borders are shown thicker, dependent on vertical
  scroll position
- this is also true when using the following "hack" to use the table's
  background color as border:

    table { border-spacing: 1px; background-color: black; }
    td { border: none; background-color; white; }

(could be an aliasing issue on my laptop only?)

--- a/sudoku.css
+++ b/sudoku.css
@@ -30,8 +30,7 @@ table.sudoku {
     margin-bottom: 15px;
     border-spacing: 0em;
     table-layout: fixed;
-    border-collapse: collapse;
-    border-spacing: 0px;
+    border-spacing: 1px;
 }
 
 table.sudoku td {
